# packrect

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: bounding_box.hxx  box_occupation_matrix.hxx  empty_strips_tracker.hxx  in_area.hxx  input_parser.hxx  invariants.hxx  min_area.hxx  optimal_rectangle_packing.hxx  point.hxx  rectangle.hxx  rectangle_containment_solver.hxx  rectangle_position.hxx  rectangle_size.hxx  solution.hxx  solution_to_string.hxx  wasted_space_pruner.hxx
inputs/: 100_1-5x1-5.txt  100_2x1.txt  9_square.txt
src/: CMakeLists.txt  bounding_box.cxx  box_occupation_matrix.cxx  empty_strips_tracker.cxx  helper.hxx  input_parser.cxx  invariants.cxx  min_area.cxx  optimal_rectangle_packing.cxx  packing_main.cxx  point.cxx  rectangle.cxx  rectangle_containment_solver.cxx  rectangle_position.cxx  rectangle_size.cxx  solution_to_string.cxx  wasted_space_pruner.cxx
tests/: CMakeLists.txt  bounding_box_tests.cxx  box_occupation_matrix_tests.cxx  input_parser_tests.cxx  optimal_rectangle_packing_tests.cxx  packing_unitTests.cxx  rectangle_containment_solver_tests.cxx  rectangle_position_tests.cxx  rectangle_tests.cxx  solution_to_string_tests.cxx  tests_helpers.cxx  tests_helpers.hxx  wasted_space_pruner_tests.cxx
